--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -9,10 +9,9 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:layout_width="350dp"
-        android:layout_height="120dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/splash"
-        android:background="@drawable/sodastudio_logo"
-        android:backgroundTint="@color/colorAccent"/>
+        android:background="@drawable/ic_launcher_foreground"/>
 
 </LinearLayout>
