--- a/app/src/main/res/anim/nav_click.xml
+++ b/app/src/main/res/anim/nav_click.xml
@@ -2,17 +2,15 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <alpha
-        android:fromAlpha = "1.0"
-        android:toAlpha = "0.5"
-        android:duration = "300">
-    </alpha>
+        android:duration="300"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.5"></alpha>
     <scale
-        android:fromXScale = "1"
-        android:toXScale = "0.9"
-        android:fromYScale = "1"
-        android:toYScale = "0.9"
+        android:duration="50"
+        android:fromXScale="1"
+        android:fromYScale="1"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration = "50">
-    </scale>
+        android:toXScale="0.9"
+        android:toYScale="0.9"></scale>
 </set>
