--- a/app/src/main/res/anim/translate.xml
+++ b/app/src/main/res/anim/translate.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <translate
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:fromXDelta="0%"
-        android:toXDelta="0%"
-        android:fromYDelta="200%"
-        android:toYDelta="0%"
+    <translate xmlns:android="http://schemas.android.com/apk/res/android"
         android:duration="1500"
+        android:fromXDelta="0%"
+        android:fromYDelta="200%"
+        android:toXDelta="0%"
+        android:toYDelta="0%"
         android:zAdjustment="top" />
 
 </set>
