--- a/app/src/main/res/drawable/login_normal.xml
+++ b/app/src/main/res/drawable/login_normal.xml
@@ -1,11 +1,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
 
-    <size android:width="100dp" android:height="50dp"/>
+    <size
+        android:width="100dp"
+        android:height="50dp" />
     <corners
         android:bottomLeftRadius="168dp"
         android:bottomRightRadius="168dp"
         android:topLeftRadius="168dp"
         android:topRightRadius="168dp" />
-    <solid android:color="#ffffff"/>
+    <solid android:color="#ffffff" />
 </shape>
