--- a/app/src/main/res/layout/activity_track_detail.xml
+++ b/app/src/main/res/layout/activity_track_detail.xml
@@ -1,174 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
 
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.github.subho57.spotifyclone.TrackDetailActivity">
 
+    <ImageView
+        android:id="@+id/detail_album_image_field"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:src="@drawable/maroon_sample_album" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/detail_track_title_field"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:text="What Lovers Do (feat. SZA)"
+            android:textAlignment="center"
+            android:textColor="#ffff"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/detail_artist_field"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="Maroon 5"
+                android:textColor="#ffff"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/detail_album_field"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:text="Red Pill Blues (Deluxe)"
+                android:textColor="#ffff"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/detail_save_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="20dp">
+
         <ImageView
-            android:id="@+id/detail_album_image_field"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
-            android:src="@drawable/maroon_sample_album"/>
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_add_black_24dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="Save"
+            android:textColor="#ffff" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/detail_track_title_field"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:textColor="#ffff"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:text="What Lovers Do (feat. SZA)"/>
+    <LinearLayout
+        android:id="@+id/detail_add_playlist_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="20dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_playlist_add_black_24dp" />
 
-                <TextView
-                    android:id="@+id/detail_artist_field"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:textSize="12sp"
-                    android:textColor="#ffff"
-                    android:textStyle="bold"
-                    android:text="Maroon 5"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="Add to Playlist"
+            android:textColor="#ffff" />
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/detail_album_field"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="10dp"
-                    android:textSize="12sp"
-                    android:textColor="#ffff"
-                    android:textStyle="bold"
-                    android:text="Red Pill Blues (Deluxe)"/>
+    <LinearLayout
+        android:id="@+id/detail_share_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="20dp">
 
-            </LinearLayout>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_file_upload_black_24dp" />
 
-        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="Share"
+            android:textColor="#ffff" />
+    </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/detail_save_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            android:orientation="horizontal">
+    <LinearLayout
+        android:id="@+id/detail_radio_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="20dp">
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_add_black_24dp"/>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_radio_black_24dp"
+            android:backgroundTint="#ffffff" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:textColor="#ffff"
-                android:text="Save"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/detail_add_playlist_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="Go to Radio"
+            android:textColor="#ffff" />
+    </LinearLayout>
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_playlist_add_black_24dp"/>
+    <LinearLayout
+        android:id="@+id/detail_album_view_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="20dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:textColor="#ffff"
-                android:text="Add to Playlist"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/detail_share_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            android:orientation="horizontal">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_surround_sound_black_24dp" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_file_upload_black_24dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:textColor="#ffff"
-                android:text="Share"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/detail_radio_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="match_parent"
-                android:backgroundTint="#ffffff"
-                android:background="@drawable/ic_radio_black_24dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:textColor="#ffff"
-                android:text="Go to Radio"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/detail_album_view_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_surround_sound_black_24dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:textColor="#ffff"
-                android:text="View Album"/>
-        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="View Album"
+            android:textColor="#ffff" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/detail_cancel_button"
