--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorWhite"
-        android:textAlignment="center"
-        android:background="@color/colorPrimaryDark"
         android:alpha="0.8"
-        android:text="Home"/>
+        android:background="@color/colorPrimaryDark"
+        android:padding="10dp"
+        android:text="Home"
+        android:textAlignment="center"
+        android:textColor="@color/colorWhite"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -33,8 +32,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -44,27 +43,27 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:text="Made For You"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textStyle="bold"
                         android:textSize="18sp"
-                        android:padding="1dp"
-                        android:text="Made For You"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:text="Get better recommendations the more you listen"
                         android:textAlignment="center"
                         android:textColor="@color/colorNavIcon"
-                        android:textSize="12sp"
-                        android:padding="1dp"
-                        android:text="Get better recommendations the more you listen"/>
+                        android:textSize="12sp" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/made_for_you_RecyclerView"
-                        android:layout_margin="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -73,8 +72,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,18 +83,18 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:text="Top Artists"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textStyle="bold"
                         android:textSize="18sp"
-                        android:padding="1dp"
-                        android:text="Top Artists"/>
+                        android:textStyle="bold" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/top_artist_RecyclerView"
-                        android:layout_margin="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -104,8 +103,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -115,27 +114,25 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:text="Top Tracks"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textStyle="bold"
                         android:textSize="18sp"
-                        android:padding="1dp"
-                        android:text="Top Tracks"/>
+                        android:textStyle="bold" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/top_tracks_RecyclerView"
-                        android:layout_margin="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
-
 
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-
 
 
 </LinearLayout>
