--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:id="@+id/rootLayout"
-    android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical">
 
     <iammert.com.view.scalinglib.ScalingLayout
         android:id="@+id/scalingLayout"
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
         app:radiusFactor="0.2">
 
         <RelativeLayout
@@ -26,8 +26,8 @@
                 android:id="@+id/searchLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
                 android:visibility="invisible">
 
                 <ImageButton
@@ -41,11 +41,11 @@
                     android:id="@+id/editTextSearch"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="24dp"
                     android:layout_toRightOf="@+id/search_text_button"
-                    android:layout_centerVertical="true"
                     android:background="@null"
-                    android:textColor="#ffffff"/>
+                    android:textColor="#ffffff" />
 
             </RelativeLayout>
 
@@ -54,11 +54,11 @@
                 android:id="@+id/textViewSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Search"
-                android:textSize="12sp"
-                android:textColorHint="#ffffff"
                 android:layout_centerInParent="true"
+                android:hint="Search"
                 android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
 
@@ -71,15 +71,14 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="Recent searches"
-        android:textSize="15sp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/Artist_search_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
