--- a/app/src/main/res/layout/music.xml
+++ b/app/src/main/res/layout/music.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
+    android:orientation="vertical"
     android:padding="5dp">
 
     <LinearLayout
         android:id="@+id/track_list_layout"
-        android:orientation="vertical"
-        android:layout_marginRight="30dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:layout_marginRight="30dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_field"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:paddingTop="5dp"
             android:paddingStart="10dp"
+            android:paddingTop="5dp"
             android:paddingEnd="10dp"
-            android:textSize="15sp"
+            android:text="What Lovers Do (feat. SZA)"
             android:textColor="#ffff"
-            android:textStyle="bold"
-            android:text="What Lovers Do (feat. SZA)"/>
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -36,20 +36,20 @@
                 android:layout_height="30dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:textSize="12sp"
+                android:text="Maroon 5"
                 android:textColor="#ffff"
-                android:textStyle="bold"
-                android:text="Maroon 5"/>
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/album_field"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginStart="10dp"
-                android:textSize="12sp"
+                android:text="Red Pill Blues (Deluxe)"
                 android:textColor="#ffff"
-                android:textStyle="bold"
-                android:text="Red Pill Blues (Deluxe)"/>
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </LinearLayout>
@@ -58,7 +58,7 @@
         android:id="@+id/more_horiz"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="15dp"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/ic_more_horiz_black_24dp"/>
+        android:layout_marginTop="15dp"
+        android:background="@drawable/ic_more_horiz_black_24dp" />
 </RelativeLayout>
